syntax = "proto3";

package unmango.baremetal.v1alpha1;

service CommandService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
  Command command = 1;
}

message CreateResponse {
  Result result = 1;
}

message DeleteRequest {
  Command create = 1;
}

message DeleteResponse {
  optional Operation op = 1;
}

message Operation {
  Result result = 1;
  Command command = 2;
}

message Command {
  Bin bin = 1;
  repeated string args = 2;
  optional string stdin = 3;
}

message Result {
  int32 exit_code = 1;
  string stdout = 2;
  string stderr = 3;
}

enum Bin {
  BIN_UNSPECIFIED = 0;
  BIN_TEE = 1;
  BIN_RM = 2;
}
